--- a/src/antlr/inputfile.lang
+++ b/src/antlr/inputfile.lang
@@ -1,9 +1,52 @@
-function another_one() returns nothing;
+int a = -2;
+int b = 3;
+double c = 4;
+
+boolean boo = c == 4;
+
+writeln("boo = " + boo);
+
+if (c > 4) then
+begin
+    writeln("inside of the if block!");
+    double d = c;
+
+    writeln("d = " + d);
+end
+else if (a < 0) then
+begin
+    writeln("inside of the else if block!");
+end
+else
+begin
+    writeln("inside of the else block!");
+end
+
+if (c < 2) then writeln("inside if expression!");
+else if (a < 0) then writeln("inside else if expression");
+else writeln("inside else expression!");
+
+int i = 0;
+
+loop if (i < 10) begin
+    i = i + 1;
+    writeln("i = " + i);
+end
+
+writeln(a);
+writeln(b);
+writeln(c);
+
+writeln("(2 + c * 3) / 10 = " + (2 + c * 3) / 10);
+
+writeln("Hello world!");
+
 
 /*
+function another_one() returns nothing;
+
     This is a block comment and it should get ignored in general.
     Any character should be fine here **@#$%^&*(Ifdnjkfdklsnaf4965216)
-*/
 
 function do_math(int a, int b) returns int
 begin
@@ -55,3 +98,4 @@ else begin
 end
 
 another_one();
+*/
